Kafka and SQLite basic integration.
  - Consuming kafka messages with headers.
  - Showing messages on data table.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.51"
 gtk = { version = "0.8.1", package = "gtk4", features = ["v4_8"] }
-relm4 = "0.8.0"
+adw = { version = "0.6.0", package = "libadwaita", features = ["v1_2"] }
+relm4 = { version = "0.8.0", features = ["libadwaita"] }
 relm4-components = "0.8.0"
-rdkafka = { version = "0.25", features = ["cmake-build"] }
+rdkafka = { version = "0.36.2", features = ["cmake-build"] }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 tokio   = "0.1.21"
 sourceview5 = { version = "0.8.0", features = ["gtk_v4_6"] }
@@ -21,6 +22,7 @@ serde_json = "1.0.79"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 tracing-tree = "0.2.4"
+thiserror = "1.0.58"
 
 [build-dependencies]
 #glib-build-tools = "0.19.0"
