--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ relm4-components = "0.8.0"
 rdkafka = { version = "0.36.2", features = ["cmake-build"] }
 rusqlite = { version = "0.31.0", features = ["bundled"] }
 tokio   = "0.1.21"
-sourceview5 = { version = "0.8.0", features = ["gtk_v4_6"] }
+sourceview5 = { version = "0.8.0", features = ["v5_4"] }
 directories = "4.0.1"
 futures = { version = "0.3.25", default-features = false }
 serde = { version = "1.0.136", features = ["derive"] }
@@ -26,3 +26,11 @@ thiserror = "1.0.58"
 
 [build-dependencies]
 #glib-build-tools = "0.19.0"
+
+[package.metadata.appimage]
+auto_link = true
+auto_link_exclude_list = [
+    #"libc.so*",
+    "libdl.so*",
+    "libpthread.so*",
+]
