--- a/docker-compose.windows.yml
+++ b/docker-compose.windows.yml
@@ -3,5 +3,6 @@ services:
     image: ghcr.io/mglolenstine/gtk4-cross:rust-gtk-4.8
     volumes:
       - .:/mnt:z
-    command: bash -c "dnf -y install mingw64-gcc-c++ gtksourceview5-devel && build --release && package"
+    #command: bash -c "dnf -y install mingw64-gcc-c++ gtksourceview5-devel && build --release && package"
+    command: bash -c "./win-prepare-and-build.sh"
 
