--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   gtk4-rs:
+    #image: relm4-docker-appimage
     image: ghcr.io/miguelbaldi/relm4-docker:latest-appimage
     volumes:
       - .:/mnt:z
