--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "krust"
 version = "0.1.0"
 edition = "2021"
+resolver = "2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -23,6 +24,8 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 tracing-tree = "0.2.4"
 thiserror = "1.0.58"
+chrono = { version = "0.4.37", features = ["serde"] }
+chrono-tz = { version = "0.9.0", features = [ "filter-by-regex" ] }
 
 [build-dependencies]
 #glib-build-tools = "0.19.0"
