--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -41,7 +41,7 @@ jobs:
   publish:
     needs: [build, build-windows]
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/download-artifact@v2
     - uses: "marvinpinto/action-automatic-releases@v1.2.1"
