--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -39,15 +39,18 @@ jobs:
           *.exe
 
   publish:
+    permissions:
+      contents: write
     needs: [build, build-windows]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
     - uses: actions/download-artifact@v2
-    - uses: "marvinpinto/action-automatic-releases@v1.2.1"
+    - uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
         prerelease: false
+        generate_release_notes: true
         files: |
           **/*.AppImage
           **/*.zip
