--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ chrono = { version = "0.4.37", features = ["serde"] }
 chrono-tz = { version = "0.9.0", features = [ "filter-by-regex" ] }
 strum = { version = "0.26.2", features = ["derive"] }
 rdkafka = { version = "0.36.2", features = [ "cmake-build", "gssapi", "ssl" ] }
+csv = "1.3.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 sasl2-sys = { version = "0.1.20",features = ["openssl-vendored"]}
