--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,9 @@ csv = "1.3.0"
 sasl2-sys = { version = "0.1.20",features = ["openssl-vendored"]}
 
 [build-dependencies]
+anyhow = "1.0.51"
 openssl-src = { version = "300", default-features = false, features = ["force-engine"] }
+vergen = { version = "8.3.1", features = ["build","git","gitcl","si"] }
 #glib-build-tools = "0.19.0"
 
 [package.metadata.appimage]
