--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ sourceview5 = { version = "0.8.0", features = ["v5_4"] }
 directories = "4.0.1"
 futures = { version = "0.3.25", default-features = false }
 serde = { version = "1.0.136", features = ["derive"] }
-serde_json = "1.0.79"
+serde_json = { version= "1.0.79", features = ["preserve_order"] }
 ron = "0.8"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
