--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_46"] }
 relm4-components = { version = "0.8.1", features = ["libadwaita"]}
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-util = "0.7.10"
-rusqlite = { version = "0.31.0", features = ["bundled"] }
+rusqlite = { version = "0.31.0", features = ["bundled", "hooks"] }
 sourceview5 = { version = "0.8.0", features = ["v5_4"] }
 directories = "4.0.1"
 futures = { version = "0.3.25", default-features = false }
@@ -34,6 +34,7 @@ chrono-tz = { version = "0.9.0", features = [ "filter-by-regex" ] }
 strum = { version = "0.26.2", features = ["derive"] }
 rdkafka = { version = "0.36.2", features = [ "cmake-build", "gssapi", "ssl" ] }
 csv = "1.3.0"
+uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
 
 [target.'cfg(target_os = "windows")'.dependencies]
 sasl2-sys = { version = "0.1.20",features = ["openssl-vendored"]}
