--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Fix tag reference (workaround for https://github.com/actions/checkout/issues/290)
       run: git fetch --update-head-ok -f origin ${{ github.ref }}:${{ github.ref }}
     - name: Build
-      run: docker-compose up
+      run: docker compose up
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
@@ -29,7 +29,7 @@ jobs:
     - name: Fix tag reference (workaround for https://github.com/actions/checkout/issues/290)
       run: git fetch --update-head-ok -f origin ${{ github.ref }}:${{ github.ref }}
     - name: Build (Windows)
-      run: docker-compose -f docker-compose.windows.yml up
+      run: docker compose -f docker-compose.windows.yml up
     - name: Make Windows Installer
       run: ./create_windows_installer.sh
     - name: Zip Portable Windows Artifact
