--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ strum = { version = "0.26.2", features = ["derive"] }
 rdkafka = { version = "0.36.2", features = [ "cmake-build", "gssapi", "ssl" ] }
 csv = "1.3.0"
 uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
+humansize = "2.0.0"
+copypasta = { version = "0.10.1", default-features = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 sasl2-sys = { version = "0.1.20",features = ["openssl-vendored"]}
