--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -58,7 +58,9 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           prerelease: false
+          draft: true
           generate_release_notes: true
+          append_body: true
           files: |
             **/*.AppImage
             **/*.zip
