--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ humansize = "2.1.3"
 copypasta = { version = "0.10.1", default-features = true }
 sysinfo = "0.31.4"
 fs_extra = "1.3.0"
+regex = "1.10.6"
+once_cell = "1.19.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 sasl2-sys = { version = "0.1.20", features = ["openssl-vendored"] }
