--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
+# Copyright (c) 2024, Miguel A. Baldi Hörlle <miguel.horlle@gmail.com>. All rights reserved. Use of
+# this source code is governed by the GPL-3.0 license that can be
+# found in the COPYING file.
+
 version: "3"
 services:
   gtk4-rs:
     image: ghcr.io/miguelbaldi/relm4-docker:latest-appimage
     volumes:
       - .:/mnt:z
-    command: sh -c "cargo  appimage"
+    command: bash -c "./build-scripts/linux-rpm-prepare-and-build.sh"
 
